--- a/package.json
+++ b/package.json
@@ -16,29 +16,31 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.12.1",
+    "ember-ajax": "^3.1.1",
+    "ember-cli": "^3.4.2",
     "ember-cli-app-version": "^2.0.0",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^3.1.0",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.12.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-resolver": "^2.0.3",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-resolver": "^5.0.1",
     "ember-source": "~2.12.0",
-    "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.2.3"
+    "ember-welcome-page": "^3.2.0",
+    "loader.js": "^4.2.3",
+    "semantic-ui-ember": "^3.0.3"
   },
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {}
 }
